--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_signin_button: ^2.0.0
-  google_fonts: ^6.2.0
+  google_fonts: 6.1.0
+  sign_in_button: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/bankcarelogo.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
